[gd_scene load_steps=6 format=3 uid="uid://1nxau27tgq8u"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy_soldier/enemy_soldier_AI.gd" id="1_44c3l"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_plpa1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q8rn5"]
size = Vector3(10.9259, 3.57208, 10.8505)

[sub_resource type="BoxShape3D" id="BoxShape3D_dakcu"]
size = Vector3(13.0833, 13.5101, 4.6947)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5vsus"]

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_44c3l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_plpa1")
skeleton = NodePath("")

[node name="NavigationAgent" type="NavigationAgent3D" parent="."]

[node name="Cover_detection_area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cover_detection_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.725403, 1.28604, 1.20427)
shape = SubResource("BoxShape3D_q8rn5")

[node name="Enemy_detection_area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy_detection_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.290962, 0.45565, 1.84735)
shape = SubResource("BoxShape3D_dakcu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5vsus")

[connection signal="body_entered" from="Cover_detection_area" to="." method="_on_cover_detection_area_body_entered"]
[connection signal="body_entered" from="Enemy_detection_area" to="." method="_on_enemy_detection_area_body_entered"]
